# PostgreSQL-Database-Connector

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: notebook1.ipynb
src/postgresql_database_connector/: __init__.py  dataframecreator.py
utils/: __init__.py  configreader.py  connect.py  create_df_query.py  modify_file_path.py
