[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postgres-database-connector"
version = "0.1.0"
description = "Toolkit for connecting to PostgreSQL and AWS-Redshift databases and executing SQL queries"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "r3card0", email = "ricardo.rdz@protonmail.com"}
]

[tool.setuptools.packages.find]
where = ["src"]